# colour-checker

./: CMakeLists.txt  README  generate.sh
extra/: README
interface/: CMakeLists.txt  main.cpp
libcolourcheck/: CMakeLists.txt
libcolourcheck/src/: CMakeLists.txt  colourfunction.cpp  colourfunction.hpp  fileline.cpp  fileline.hpp  filereader.cpp  filereader.hpp  filter.hpp  main.cpp  spectrometer.cpp  spectrometer.hpp
libcolourcheck/test/: CMakeLists.txt  avgfilter.cpp  colourfunction.cpp  test.cpp
